--- a/app/views/landing.html
+++ b/app/views/landing.html
@@ -1,7 +1,7 @@
 <div class="container jumbo-slider">
     <section id="search-box" class="row col-xs-12" style=" padding: 0;height: 200px; width: 950px;margin: 4% auto 0;">
         <div class="col-md-7 wow fadeIn animated" data-wow-duration="2.4s" data-wow-delay="0.5s" style="visibility: visible; -webkit-animation: fadeIn 2.4s 0.5s;">
-            <img src="../wp-content/themes/digesto/assets/images/digesto-juridico-argentino.png" alt="" style="margin: 0 auto;">
+            <img src="images/digesto-juridico-argentino.png" alt="" style="margin: 0 auto;">
         </div>
         <div class="col-md-5 wow fadeIn animated" data-wow-duration="2.4s" data-wow-delay="0.5s" style="visibility: visible; -webkit-animation: fadeIn 2.4s 0.5s;">
             <a href="http://dsdp.hcdn.gob.ar/digestojuridico/indice/" style="margin: 90px 0 0 45px;" class="btn btn-lg btn-warning pull-right btn-responsive-center">Accedé a las leyes vigentes</a>
@@ -13,8 +13,8 @@
         <h2>¿Qué es el digesto jurídico?</h2>
         <figure class="col-xs-12 col-md-4 pull-left" style="margin: 25px 0 25px 0;">
             <div class="margin-auto relative" style="width: 168px;">
-                <img src="../wp-content/themes/digesto/assets/images/front-digesto-libro.png" alt="">
-                <img class="absolute wow fadeInUp animated" style="top: 95px; left: 68px; visibility: visible; -webkit-animation: fadeInUp 2s 2.5s;" data-wow-duration="2s" data-wow-delay="2.5s" src="../wp-content/themes/digesto/assets/images/front-digesto-check.png" alt="">
+                <img src="images/front-digesto-libro.png" alt="">
+                <img class="absolute wow fadeInUp animated" style="top: 95px; left: 68px; visibility: visible; -webkit-animation: fadeInUp 2s 2.5s;" data-wow-duration="2s" data-wow-delay="2.5s" src="images/front-digesto-check.png" alt="">
             </div>
         </figure>
         <p class="col-xs-12 col-md-8 pull-right text-center">
@@ -30,8 +30,8 @@
         </p>
         <figure class="col-xs-12 col-md-4 col-md-offset-2 pull-left ">
             <div class="margin-auto" style="width: 168px;">
-                <img class="absolute wow flipOutX" data-wow-duration="1s" data-wow-delay="2s" src="../wp-content/themes/digesto/assets/images/reloj-arena.png" alt="" style="visibility: hidden; -webkit-animation: none 1s 2s;">
-                <img class="relative wow flipInX" data-wow-duration="1s" data-wow-delay="2.6s" src="../wp-content/themes/digesto/assets/images/mouse.png" alt="" style="visibility: hidden; -webkit-animation: none 1s 2.6s;">
+                <img class="absolute wow flipOutX" data-wow-duration="1s" data-wow-delay="2s" src="images/reloj-arena.png" alt="" style="visibility: hidden; -webkit-animation: none 1s 2s;">
+                <img class="relative wow flipInX" data-wow-duration="1s" data-wow-delay="2.6s" src="images/mouse.png" alt="" style="visibility: hidden; -webkit-animation: none 1s 2.6s;">
             </div>
         </figure>
         <div class="col-xs-12 col-md-6 pull-right wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s" style="margin: 50px auto; display: block; visibility: hidden; -webkit-animation: none 2s 0.2s;">
