--- a/app/views/landing.html
+++ b/app/views/landing.html
@@ -1,20 +1,96 @@
-<div class="container jumbo-slider">
-    <section id="search-box" class="row col-xs-12" style=" padding: 0;height: 200px; width: 950px;margin: 4% auto 0;">
-        <div class="col-md-7 wow fadeIn animated" data-wow-duration="2.4s" data-wow-delay="0.5s" style="visibility: visible; -webkit-animation: fadeIn 2.4s 0.5s;">
-            <img src="images/digesto-juridico-argentino.png" alt="" style="margin: 0 auto;">
+<div id="jumbo-landing"  class="jumbotron">
+    <section class="container">
+        <div>
+            <div class="col-md-4">
+                <form role="form">
+                    <div class="form-group">
+                        <label for="norma-nro-codigo">N° / Código de Norma</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputPassword1">Categoría</label>
+                        <select class="form-control">
+                            <option>ADM – Administrativo;</option>
+                            <option>ACU – Cultura, Ciencia y Tecnología;</option>
+                            <option>AED – Educación;</option>
+                            <option>ASA – Salud Pública;</option>
+                            <option>ASE – Seguridad;</option>
+                            <option>ASO – Acción y Desarrollo Social;</option>
+                            <option>B – Aduanero;</option>
+                            <option>C – Aeronáutico-Espacial;</option>
+                            <option>D – Bancario, Monetario y Financiero;</option>
+                            <option>E – Civil;</option>
+                            <option>F – Comercial;</option>
+                            <option>G – Comunitario;</option>
+                            <option>H – Constitucional;</option>
+                            <option>I – De la Comunicación;</option>
+                            <option>J – Diplomático y Consular;</option>
+                            <option>K – Económico;</option>
+                            <option>L – Impositivo;</option>
+                            <option>M – Industrial;</option>
+                            <option>N – Internacional Privado;</option>
+                            <option>O – Internacional Público;</option>
+                            <option>P – Laboral;</option>
+                            <option>Q – Medio Ambiente;</option>
+                            <option>R – Militar;</option>
+                            <option>S – Penal;</option>
+                            <option>T – Político;</option>
+                            <option>U – Procesal Civil y Comercial;</option>
+                            <option>V – Procesal Penal;</option>
+                            <option>W – Público Provincial y Municipal;</option>
+                            <option>X – Recursos Naturales;</option>
+                            <option>Y – Seguridad Social;</option>
+                            <option>Z – Transporte y Seguros.</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputFile">Fecha de sanción</label>
+                        <div>
+                            <div class="col-md-6">
+                                <select class="form-control">
+                                <option>2014</option>
+                                <option>2013</option>
+                                <option>2012</option>
+                                <option>2011</option>
+                                <option>2010</option>
+                                <option>2009</option>
+                                <option>2008</option>
+                                <option>2007</option>
+                                <option>2006</option>
+                                </select>
+                            </div>
+                            <div class="col-md-6">
+                                <select class="form-control">
+                                    <option>2014</option>
+                                    <option>2013</option>
+                                    <option>2012</option>
+                                    <option>2011</option>
+                                    <option>2010</option>
+                                    <option>2009</option>
+                                    <option>2008</option>
+                                    <option>2007</option>
+                                    <option>2006</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-warning col-md-12">Buscar normas</button>
+                </form>
+            </div>
+            <div class="col-md-8">
+                <h1>Digesto Jurídico Argentino</h1>
+                <p>El Digesto Jurídico Argentino, regula el ordenamiento de las leyes nacionales de carácter general vigente mediante el procedimiento de consolidación normativa, conteniendo además el listado de leyes de carácter general no vigentes y las referencias a las normas aprobadas por organismos supraestatales o intergubernamentales que la Nación integra. A partir de su promulgación, se inicia un período de ciento ochenta días para consultas y observaciones sobre su contenido con el objeto de perfeccionar su versión definitiva.</p>
+            </div>
         </div>
-        <div class="col-md-5 wow fadeIn animated" data-wow-duration="2.4s" data-wow-delay="0.5s" style="visibility: visible; -webkit-animation: fadeIn 2.4s 0.5s;">
-            <a href="http://dsdp.hcdn.gob.ar/digestojuridico/indice/" style="margin: 90px 0 0 45px;" class="btn btn-lg btn-warning pull-right btn-responsive-center">Accedé a las leyes vigentes</a>
-        </div>
-    </section>
-</div>
+    </section><!--/.container-->
+</div><!--/.container/.jumbo-slider-->
 <div class="container front-container">
     <section class="row">
         <h2>¿Qué es el digesto jurídico?</h2>
-        <figure class="col-xs-12 col-md-4 pull-left" style="margin: 25px 0 25px 0;">
-            <div class="margin-auto relative" style="width: 168px;">
+        <figure class="col-xs-12 col-md-4 pull-left">
+            <div class="margin-auto relative">
                 <img src="images/front-digesto-libro.png" alt="">
-                <img class="absolute wow fadeInUp animated" style="top: 95px; left: 68px; visibility: visible; -webkit-animation: fadeInUp 2s 2.5s;" data-wow-duration="2s" data-wow-delay="2.5s" src="images/front-digesto-check.png" alt="">
+                <img class="absolute wow fadeInUp animated" src="images/front-digesto-check.png" alt="">
             </div>
         </figure>
         <p class="col-xs-12 col-md-8 pull-right text-center">
