--- a/app/styles/_common.scss
+++ b/app/styles/_common.scss
@@ -1,4 +1,174 @@
 @import "compass/css3";
 @import "compass/utilities";
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,300italic,600italic,400,300,600,800);
+@import url(http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic);
 
-.header{}
+/* variables */
+
+$color-main-blue: 			rgba(73,171,222,1);
+$color-dark-blue: 			rgba(59,139,181,1);
+$color-light-blue: 			rgba(79,202,248,1);
+$color-light-white:			rgba(255,255,255,0.3);
+$navbar-height: 			64px;
+$font-family-primary: 		'Open Sans', sans-serif;
+$font-family-secondary: 	'Lora', serif;
+$font-size-xlarge:			$font-size-base * 2; 				// 32px
+$font-size-large:			$font-size-base * 1.5; 				// 24px
+$font-size-medium:			$font-size-base * 1.125; 				// 20px
+$font-size-base: 			16px;								// 16px
+$font-size-small:			$font-size-base * 0.8125; 			// 13px
+$font-size-xsmall:			$font-size-base * 0.6875; 			// 11px
+$text-shadow-image: 		0 2px 10px rgba(0, 0, 0, 0.1);
+
+/* etiquetas */
+
+body
+{
+	font-family: $font-family-primary;
+	font-size: $font-size-base;
+	font-weight: 400;
+}
+
+/* id */
+
+#icon-leg-vigente
+{
+	background: url('../images/icon_02.png') no-repeat 16px 14px;
+}
+#icon-leg-no-vigente
+{
+	background: url('../images/icon_01.png') no-repeat 16px 14px;
+}
+#jumbo-landing
+{
+	background: url('../images/login-sparl-01-1024x488.jpg') no-repeat 100%;
+	background-size: cover;
+	width: 100%;
+
+	.container
+	{
+		h1
+		{
+			color: white;
+			font-size: $font-size-xlarge;
+			font-weight: 800;
+			margin: 30px 0;
+		}
+		p
+		{
+			color: white;
+			font-family: $font-family-secondary;
+			font-size: $font-size-base;
+			margin: 15px 0;
+			text-shadow: $text-shadow-image;
+		}
+	}
+}
+
+/* clases */
+
+.caret
+{
+	margin: 0 0 0 8px;
+}
+.navbar
+{
+	border: 0;
+	font-size: $font-size-base * 0.8;
+	margin: 0;
+}
+.navbar-collapse
+{
+	@media (max-width: $grid-float-breakpoint)
+	{
+   		padding: 0;
+   	}
+}
+.navbar-default
+{
+	background-color: $color-main-blue;
+
+	.navbar-nav
+	{
+		margin: 0;
+
+		li
+		{
+			a
+			{
+				color: white;
+				cursor: pointer;
+				padding: 20px;
+			
+				&:hover,
+				&:focus,
+				&:active
+				{
+					background-color: transparentize($color-dark-blue, 0.5);
+					color: white;
+				}
+			}
+		}
+		> .open
+		{
+			> a
+			{
+				background-color: $color-dark-blue !important;
+				color: white !important;
+				
+				&:hover,
+				&:focus
+				{
+					background-color: $color-dark-blue;
+					color: white;
+				}
+			}
+		}
+		.dropdown
+		{
+			.dropdown-menu
+			{
+				background-color: $color-dark-blue;
+				border: none;
+				box-shadow: none;
+				padding: 0;
+
+				li
+				{
+					border-bottom: 1px solid $color-light-white;
+
+					&:last-child
+					{
+						border: 0;
+					}
+					a
+					{
+						color: white !important;
+						padding: 14px 30px 14px 44px;
+
+						&:hover,
+						&:focus
+						{
+							background-color: rgba(255, 255, 255, 0.1) !important;
+						}
+					}
+				}
+			}
+		}
+	}
+	.navbar-toggle
+	{
+			border: none;
+
+			&:hover,
+			&:focus
+			{
+				background-color: $color-main-blue;
+			}
+
+			.icon-bar
+			{
+				background-color: white;
+			}
+	}
+}
