--- a/app/views/landing.html
+++ b/app/views/landing.html
@@ -1,120 +1,125 @@
-<div id="jumbo-landing"  class="jumbotron">
-    <section class="container">
-        <div class="col-md-10 col-md-offset-1">
-            <div class="col-md-4">
-                <form role="form" id="landing-form-search" class="col-md-12 form-base">
-                    <fieldset>
-                        <legend>Buscar normas</legend>
-                        <div class="form-group">
-                            <label for="norma-nro-codigo">N° / Código de Norma</label>
-                            <input type="text" class="form-control" id="norma-nro-codigo" placeholder="Código de Norma">
-                        </div>
-                        <div class="form-group">
-                            <label for="exampleInputPassword1">Categoría</label>
-                            <select class="form-control">
-                                <option>ADM – Administrativo</option>
-                                <option>ACU – Cultura, Ciencia y Tecnología</option>
-                                <option>AED – Educación</option>
-                                <option>ASA – Salud Pública</option>
-                                <option>ASE – Seguridad</option>
-                                <option>ASO – Acción y Desarrollo Social</option>
-                                <option>B – Aduanero</option>
-                                <option>C – Aeronáutico-Espacial</option>
-                                <option>D – Bancario, Monetario y Financiero</option>
-                                <option>E – Civil</option>
-                                <option>F – Comercial</option>
-                                <option>G – Comunitario</option>
-                                <option>H – Constitucional</option>
-                                <option>I – De la Comunicación</option>
-                                <option>J – Diplomático y Consular</option>
-                                <option>K – Económico</option>
-                                <option>L – Impositivo</option>
-                                <option>M – Industrial</option>
-                                <option>N – Internacional Privado</option>
-                                <option>O – Internacional Público</option>
-                                <option>P – Laboral</option>
-                                <option>Q – Medio Ambiente</option>
-                                <option>R – Militar</option>
-                                <option>S – Penal</option>
-                                <option>T – Político</option>
-                                <option>U – Procesal Civil y Comercial</option>
-                                <option>V – Procesal Penal</option>
-                                <option>W – Público Provincial y Municipal</option>
-                                <option>X – Recursos Naturales</option>
-                                <option>Y – Seguridad Social</option>
-                                <option>Z – Transporte y Seguros</option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label for="exampleInputFile">Fecha de sanción</label>
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <select class="form-control">
-                                        <option>2014</option>
-                                        <option>2013</option>
-                                        <option>2012</option>
-                                        <option>2011</option>
-                                        <option>2010</option>
-                                        <option>2009</option>
-                                        <option>2008</option>
-                                        <option>2007</option>
-                                        <option>2006</option>
-                                    </select>
-                                </div>
-                                <div class="col-md-6">
-                                    <select class="form-control">
-                                        <option>2014</option>
-                                        <option>2013</option>
-                                        <option>2012</option>
-                                        <option>2011</option>
-                                        <option>2010</option>
-                                        <option>2009</option>
-                                        <option>2008</option>
-                                        <option>2007</option>
-                                        <option>2006</option>
-                                    </select>
+<div id="landing">
+    <section id="jumbo-landing"  class="jumbotron">
+        <div class="container">
+            <div class="col-md-10 col-md-offset-1">
+                <div class="col-md-4">
+                    <form role="form" id="landing-form-search" class="col-md-12 form-base">
+                        <fieldset>
+                            <legend>Buscar normas</legend>
+                            <div class="form-group">
+                                <label for="norma-nro-codigo">N° / Código de Norma</label>
+                                <input type="text" class="form-control" id="norma-nro-codigo" placeholder="Código de Norma">
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputPassword1">Categoría</label>
+                                <select class="form-control">
+                                    <option>ADM – Administrativo</option>
+                                    <option>ACU – Cultura, Ciencia y Tecnología</option>
+                                    <option>AED – Educación</option>
+                                    <option>ASA – Salud Pública</option>
+                                    <option>ASE – Seguridad</option>
+                                    <option>ASO – Acción y Desarrollo Social</option>
+                                    <option>B – Aduanero</option>
+                                    <option>C – Aeronáutico-Espacial</option>
+                                    <option>D – Bancario, Monetario y Financiero</option>
+                                    <option>E – Civil</option>
+                                    <option>F – Comercial</option>
+                                    <option>G – Comunitario</option>
+                                    <option>H – Constitucional</option>
+                                    <option>I – De la Comunicación</option>
+                                    <option>J – Diplomático y Consular</option>
+                                    <option>K – Económico</option>
+                                    <option>L – Impositivo</option>
+                                    <option>M – Industrial</option>
+                                    <option>N – Internacional Privado</option>
+                                    <option>O – Internacional Público</option>
+                                    <option>P – Laboral</option>
+                                    <option>Q – Medio Ambiente</option>
+                                    <option>R – Militar</option>
+                                    <option>S – Penal</option>
+                                    <option>T – Político</option>
+                                    <option>U – Procesal Civil y Comercial</option>
+                                    <option>V – Procesal Penal</option>
+                                    <option>W – Público Provincial y Municipal</option>
+                                    <option>X – Recursos Naturales</option>
+                                    <option>Y – Seguridad Social</option>
+                                    <option>Z – Transporte y Seguros</option>
+                                </select>
+                            </div>
+                            <div class="form-group">
+                                <label for="exampleInputFile">Fecha de sanción</label>
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <select class="form-control">
+                                            <option>2014</option>
+                                            <option>2013</option>
+                                            <option>2012</option>
+                                            <option>2011</option>
+                                            <option>2010</option>
+                                            <option>2009</option>
+                                            <option>2008</option>
+                                            <option>2007</option>
+                                            <option>2006</option>
+                                        </select>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <select class="form-control">
+                                            <option>2014</option>
+                                            <option>2013</option>
+                                            <option>2012</option>
+                                            <option>2011</option>
+                                            <option>2010</option>
+                                            <option>2009</option>
+                                            <option>2008</option>
+                                            <option>2007</option>
+                                            <option>2006</option>
+                                        </select>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <button type="submit" class="btn btn-warning col-md-12">Buscar normas</button>
-                    </fieldset>
-                </form>
+                            <button type="submit" class="btn btn-warning col-md-12">Buscar normas</button>
+                        </fieldset>
+                    </form>
+                </div>
+                <div id ="jumbo-info" class="col-md-8">
+                    <h1 class="title-primary">Digesto Jurídico Argentino</h1>
+                    <p class="text-p">El Digesto Jurídico Argentino, regula el ordenamiento de las leyes nacionales de carácter general vigente mediante el procedimiento de consolidación normativa, conteniendo además el listado de leyes de carácter general no vigentes y las referencias a las normas aprobadas por organismos supraestatales o intergubernamentales que la Nación integra. </p>
+                </div>
             </div>
-            <div id ="jumbo-info" class="col-md-8">
-                <h1>Digesto Jurídico Argentino</h1>
-                <p>El Digesto Jurídico Argentino, regula el ordenamiento de las leyes nacionales de carácter general vigente mediante el procedimiento de consolidación normativa, conteniendo además el listado de leyes de carácter general no vigentes y las referencias a las normas aprobadas por organismos supraestatales o intergubernamentales que la Nación integra. </p>
-            </div>
+        </div><!--/.container-->
+    </section><!--/#jumbo-landing-->
+    <section id="landing-content" class="container">
+        <div class="row">
+            <article class="col-md-10 col-md-offset-1">
+                <div class="col-md-8">
+                    <h2 class="title-secondary">¿Cómo puedo realizar una consulta?</h2>
+                    <p class="text-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+                <figure class="col-md-4">
+                    <img src="#" alt="Envío de consultas" />
+                </figure>
+            </article>
         </div>
-    </section><!--/.container-->
-</div><!--/.container/.jumbo-slider-->
-<div class="container front-container">
-    <section class="row">
-        <h2>¿Qué es el digesto jurídico?</h2>
-        <figure class="col-xs-12 col-md-4 pull-left">
-            <div class="margin-auto relative">
-                <img src="images/front-digesto-libro.png" alt="">
-                <img class="absolute wow fadeInUp animated" src="images/front-digesto-check.png" alt="">
-            </div>
-        </figure>
-        <p class="col-xs-12 col-md-8 pull-right text-center">
-            El Digesto Jurídico Argentino, regula el ordenamiento de las leyes nacionales de carácter general vigente mediante el procedimiento de consolidación normativa, conteniendo además el listado de leyes de carácter general no vigentes y las referencias a las normas aprobadas por organismos supraestatales o intergubernamentales que la Nación integra. A partir de su promulgación, se inicia un período de ciento ochenta días para consultas y observaciones sobre su contenido con el objeto de perfeccionar su versión definitiva.
-        </p>
-    </section>
-
-    <section class="row">
-        <h2>¿Cómo participar?</h2>
-        <p class="pull-left">
-            Durante un período de ciento ochenta (180) días corridos desde la publicación de la presente ley, la Comisión Bicameral Permanente del Digesto Jurídico Argentino dará a publicidad el contenido del Digesto Jurídico Argentino.
-            En dicho plazo, la comisión bicameral recibirá las consultas y observaciones fundadas que pudieran efectuarse en relación con el encuadramiento en una categoría, la consolidación del texto o la vigencia de una ley incluida en el Digesto Jurídico Argentino.
-        </p>
-        <figure class="col-xs-12 col-md-4 col-md-offset-2 pull-left ">
-            <div class="margin-auto" style="width: 168px;">
-                <img class="absolute wow flipOutX" data-wow-duration="1s" data-wow-delay="2s" src="images/reloj-arena.png" alt="" style="visibility: hidden; -webkit-animation: none 1s 2s;">
-                <img class="relative wow flipInX" data-wow-duration="1s" data-wow-delay="2.6s" src="images/mouse.png" alt="" style="visibility: hidden; -webkit-animation: none 1s 2.6s;">
-            </div>
-        </figure>
-        <div class="col-xs-12 col-md-6 pull-right wow fadeInUp" data-wow-duration="2s" data-wow-delay="0.2s" style="margin: 50px auto; display: block; visibility: hidden; -webkit-animation: none 2s 0.2s;">
-            <a href="http://dsdp.hcdn.gob.ar/digestojuridico/indice/" class="btn btn-lg btn-warning">Accedé a las leyes vigentes</a>
+        <div class="row">
+            <article class="col-md-10 col-md-offset-1">
+                <div class="col-md-8 pull-right">
+                    <h2 class="title-secondary">¿Cómo se constituye el digesto jurídico?</h2>
+                    <p class="text-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+                    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+                    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                </div>
+                <figure class="col-md-4 pull-left">
+                    <img src="#" alt="Envío de consultas" />
+                </figure>
+            </article>
         </div>
-    </section>
-</div>
+    </section><!--/#landing-content-->
+</div><!--/#landing-->
