--- a/app/styles/_common.scss
+++ b/app/styles/_common.scss
@@ -30,7 +30,7 @@ $font-size-xlarge:			$font-size-base * 2; 				// 32px
 $font-size-large:			$font-size-base * 1.5; 				// 24px
 $font-size-medium:			$font-size-base * 1.25;				// 20px
 $font-size-base: 			16px;								// 16px
-$font-size-small:			$font-size-base * 0.8125; 			// 13px
+$font-size-small:			$font-size-base * 0.875; 			// 14px
 $font-size-xsmall:			$font-size-base * 0.6875; 			// 11px
 $text-shadow-image: 		0 2px 10px rgba(0, 0, 0, 0.1);
 
@@ -63,7 +63,7 @@ body
 .navbar
 {
 	border: 0;
-	font-size: $font-size-base * 0.8;
+	font-size: $font-size-small;
 	margin: 0;
 }
 .navbar-collapse
@@ -147,17 +147,33 @@ body
 	}
 	.navbar-toggle
 	{
-			border: none;
+		border: none;
 
-			&:hover,
-			&:focus
-			{
-				background-color: $color-main-blue;
-			}
+		&:hover,
+		&:focus
+		{
+			background-color: $color-main-blue;
+		}
 
-			.icon-bar
-			{
-				background-color: white;
-			}
+		.icon-bar
+		{
+			background-color: white;
+		}
 	}
+}
+.text-p
+{
+	font-family: $font-family-secondary;
+	font-size: $font-size-base !important;
+	margin: 15px 0;
+}
+.title-primary
+{
+	font-size: $font-size-xlarge !important;
+	font-weight: 800;
+}
+.title-secondary
+{
+	font-size: $font-size-large;
+	font-weight: 600;
 }
