--- a/app/styles/_landing.scss
+++ b/app/styles/_landing.scss
@@ -14,23 +14,19 @@
 
 	#jumbo-info
 	{
-		vertical-align: center;
+		margin: 50px 0;
+		text-align: center;
 	}
 	.container
 	{
 		h1
 		{
 			color: white;
-			font-size: $font-size-xlarge;
-			font-weight: 800;
 			margin: 30px 0;
 		}
 		p
 		{
 			color: white;
-			font-family: $font-family-secondary;
-			font-size: $font-size-base;
-			margin: 15px 0;
 			text-shadow: $text-shadow-image;
 		}
 	}
